# mettail-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cursor_sharing_ascent_syntax_export_wit.md  readme_dev.md  rust-toolchain.toml  rustfmt.toml
ascent_syntax_export/: .gitignore  Cargo.toml  build.rs
ascent_syntax_export/examples/: parse_demo.rs
ascent_syntax_export/src/: lib.rs
languages/: Cargo.toml  numeric_dispatch.rs
languages/benches/: bench_binders.rs  bench_collections.rs  bench_cross_category.rs  bench_infix.rs  bench_nesting.rs  bench_prefix.rs  bench_scaling.rs  parse_bench.rs  recovery_bench.rs  rhocalc_bench.rs
languages/benches/bench_common/: mod.rs
languages/lang-gen/: Cargo.toml  build.rs
languages/lang-gen/src/: lib.rs
languages/src/: ambient.rs  calc_numeric_cast.rs  calculator.rs  dual_indexed.rs  for_clause.rs  lambda.rs  led_test.rs  lib.rs  rhocalc.rs  rhocalc_numeric_cast.rs  space.rs
languages/src/composition/: base_lang.rs  composed_lang.rs  extended_lang.rs  fragments.rs  grammar_import_lang.rs  mixed_lang.rs  mod.rs
languages/src/rhocalc/: receive.rs  type_inference.rs
languages/tests/: ambient_tests.rs  calculator.rs  casting_example_files.rs  composition_tests.rs  consolidation_tests.rs  edge_case_tests.rs  exec_empty_collection.rs  led_delegation_tests.rs  numeric_bigint_cast_regressions.rs  parse_error_tests.rs  recovery_integration_tests.rs  rhocalc.rs  rhocalc_example_files.rs  rhocalc_tests.rs  roundtrip_tests.proptest-regressions  roundtrip_tests.rs  trampoline_tests.rs
macros/: Cargo.toml
macros/docs/codegen/: README.md  antipattern-detection.md  bloom-filter.md  congruence-closure.md  equation-system.md  rule-fusion.md  rule-generation.md
macros/docs/term-ops/: README.md  depth-analysis.md  ground-detection.md  hash-consing-analysis.md  normalization.md  substitution.md
macros/src/: lib.rs  utils.rs
macros/src/ascent/: categories.rs  equations.rs  mod.rs  relations.rs  rules.rs
macros/src/ast/: compose.rs  fragment.rs  grammar.rs  language.rs  merge.rs  mod.rs  pattern.rs  registry.rs  syntax.rs  term.rs  tests.rs  theory.rs  token_codec.rs  types.rs  types_test.rs
macros/src/codegen/: ast_gen.rs  display.rs  env.rs  mod.rs  subst.rs
macros/src/logic/: antipattern.rs  bloom_filter.rs  categories.rs  common.rs  congruence.rs  equations.rs  fusion.rs  helpers.rs  mod.rs  pattern_codec.rs  pattern_trie.rs  relations.rs  rules.rs  unification.rs  writer.rs
macros/src/validation/: typechecker.rs  validator.rs
prattail/: Cargo.toml
prattail/benches/: bench_analysis.rs  bench_codegen.rs  bench_dispatch.rs  bench_egraph.rs  bench_end_to_end.rs  bench_lexer.rs  bench_lexer_codegen.rs  bench_logict.rs  bench_presburger.rs  bench_sft.rs  bench_type_system.rs  bench_wfst.rs
prattail/benches/bench_specs/: mod.rs
prattail/docs/: README.md
prattail/docs/architecture/: README.md  crate-structure.md  data-flow.md  extension-points.md  generated-code-anatomy.md
prattail/docs/benchmarks/: optimization-ledger.md  parse-performance.md  wfst-pipeline-integration.md
prattail/docs/design/: README.md  advanced-automata-overview.md  analysis-pipeline-overview.md  architecture-overview.md  ascent-codegen-optimizations.md  automata-codegen-optimizations.md  automata-pipeline.md  composed-dispatch.md  conditional-dispatch-architecture.md  cross-category-dispatch.md  egraph-equality-saturation.md  incremental-lexer.md  lazy-trampoline-parser.md  lint-layer.md  mettail-gillespie-notes.md  motivation.md  multi-accept-dfa.md  multi-tape-automata.md  multiset-automata.md  optimization-pipeline-overview.md  parity-tree-automata.md  parser-driven-lexing.md  polynomial-awa.md  pratt-generator.md  predicate-dispatch-automaton.md  prediction-engine.md  probabilistic-automata.md  quick-reference.md  recursive-descent-generator.md  register-automata.md  semiring-catalog.md  symbolic-automata.md  symbolic-finite-transducer.md  two-way-transducer.md  type-system-framework.md  weighted-buchi.md  weighted-mso.md  weighted-vpa.md
prattail/docs/diagnostics/: README.md
prattail/docs/optimization/: N06-ISO.md  PR01-DCE.md  PR01-WEIGHT.md  RA01-SKIP.md  README.md  SYM01-DCE.md  c1-alpha-equiv-lint.md  completed-sprints.md  deferred-and-rejected.md  n10-subsumption.md  r1-term-equality-cache.md
prattail/docs/theory/: decidability-classification.md  finite-automata.md  parsing-landscape.md  pratt-parsing.md  prediction-and-lookahead.md
prattail/docs/usage/: ebnf-dump.md  grammar-features.md  migration-from-lalrpop.md  quick-start.md  troubleshooting.md
prattail/proptest-regressions/: decision_tree.txt
prattail/src/: algebraic.rs  alternating.rs  ara.rs  binding_power.rs  buchi.rs  cegar.rs  classify.rs  compose.rs  composition_optimize.rs  composition_verify.rs  confluence.rs  cost_benefit.rs  cra.rs  decision_tree.rs  dispatch.rs  ebnf.rs  egraph.rs  ewpds.rs  fixed_lit.rs  float_lit.rs  forward_backward.rs  grammar_gen.rs  int_lit.rs  kat.rs  lattice.rs  lattice_theory.rs  lexer.rs  lib.rs  lint.rs  literal_patterns.ebnf  log_push.rs  logict.rs  ltl.rs  morphism.rs  multi_tape.rs  multiset_automata.rs  newton.rs  nominal.rs  parity_tree.rs  petri.rs  (+34 more)
prattail/src/automata/: codegen.rs  minimize.rs  mod.rs  mph.rs  nfa.rs  partition.rs  regex.rs  semiring.rs  subset.rs  utf8.rs
prattail/src/tests/: automata_tests.rs  error_tests.rs  int_lit_tests.rs  integration_tests.rs  lexer_tests.rs  mod.rs  prediction_tests.rs  recovery_tests.rs  warning_tests.rs
query/: Cargo.toml
query/src/: ast.rs  data_source.rs  executor.rs  lib.rs  planner.rs  run.rs  schema.rs
repl/: Cargo.toml
repl/src/: lib.rs  main.rs  pretty.rs  registry.rs  repl.rs  state.rs  theory.rs
runtime/: Cargo.toml
runtime/docs/: README.md  binding-infrastructure.md  hash-consing.md
runtime/src/: binding.rs  canonical_bigint.rs  canonical_bigrat.rs  canonical_complex.rs  canonical_fixed_point.rs  canonical_float.rs  hash_consing.rs  hashbag.rs  hashmap_lit.rs  language.rs  lib.rs  matchings.rs  metadata.rs  numeric_cast.rs  numeric_cast_dispatch.rs
(+693 files in other folders)
