[workspace]
members = ["macros", "runtime", "languages", "repl", "prattail",
    # "ascent/ascent",
    # "ascent/ascent_base",
    # "ascent/ascent_macro",
    # "ascent/byods/ascent-byods-rels",
]
resolver = "2"

[package]
name = "mettail"
version = "0.1.0"
edition = "2021"
default-run = "mettail"

[[bin]]
name = "mettail"
path = "repl/src/main.rs"

[dependencies]
mettail-repl = { path = "repl" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[features]
wfst = ["mettail-repl/wfst"]
wfst-log = ["mettail-repl/wfst-log"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MeTTaIL Contributors"]
license = "MIT"
repository = "https://github.com/cb-wells/mettail-rust"
homepage = "https://github.com/cb-wells/mettail-rust"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"
regex = "1.0"
rand = "0.8"

ascent = { version = "0.8" }
ascent-byods-rels = { version = "0.8" }
moniker = { version = "0.5", features = ["moniker-derive"] }
indexmap = "2.0"

# ascent_macro = { path = "ascent/ascent_macro" }
# ascent_base = { path = "ascent/ascent_base" }

[profile.dev]
codegen-backend = "cranelift" # Fast compile, slower runtime (~2.7x vs LLVM)
debug = "line-tables-only"    # Saves debuginfo generation time

[profile.release]
codegen-backend = "llvm"      # Full LLVM optimization for runtime performance
opt-level = 3

[profile.bench]
inherits = "release"          # Benchmarks use LLVM for accurate measurements
