[package]
name = "mettail-languages"
version = "0.1.0"
edition = "2021"

# Library only - no binaries
# Examples are in workspace examples/ directory
# Tests use separate test binaries

[features]
## Propagate features through macros to mettail-prattail.
wfst-log = ["mettail-macros/wfst-log", "mettail-prattail/wfst-log"]
## Test-only languages: composition (BaseMath, ExtMath, MixedMath, ImportedMath,
## CalcLambda) and LedTest. Not for application use.
test-languages = []
## Enable runtime parser coverage tracking (D07). When enabled, generated parsers
## record which dispatch paths are exercised. Call `__coverage::dump()` to retrieve
## the coverage map. Activated by setting `PRATTAIL_COVERAGE=1` during code generation.
parser-coverage = []

[dependencies]
mettail-macros = { path = "../macros" }
mettail-prattail = { path = "../prattail" }
mettail-runtime = { path = "../runtime" }
moniker = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }

ascent = { workspace = true }
ascent-byods-rels = { workspace = true }
hashbrown = { version = "0.14", features = ["raw"] }
rustc-hash = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "rhocalc_bench"
harness = false

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "bench_infix"
harness = false

[[bench]]
name = "bench_prefix"
harness = false

[[bench]]
name = "bench_nesting"
harness = false

[[bench]]
name = "bench_collections"
harness = false

[[bench]]
name = "bench_binders"
harness = false

[[bench]]
name = "bench_cross_category"
harness = false

[[bench]]
name = "bench_scaling"
harness = false

[[bench]]
name = "recovery_bench"
harness = false
