[package]
name = "mettail-languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# Library only - no binaries
# Examples are in workspace examples/ directory
# Tests use separate test binaries

[features]
## Propagate WFST features through macros to mettail-prattail.
wfst = ["mettail-macros/wfst"]
wfst-log = ["mettail-macros/wfst-log"]

[dependencies]
mettail-macros = { path = "../macros" }
mettail-runtime = { path = "../runtime" }
mettail-prattail = { path = "../prattail" }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
moniker = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }

ascent = { workspace = true }
ascent-byods-rels = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "rhocalc_bench"
harness = false

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "bench_infix"
harness = false

[[bench]]
name = "bench_prefix"
harness = false

[[bench]]
name = "bench_nesting"
harness = false

[[bench]]
name = "bench_collections"
harness = false

[[bench]]
name = "bench_binders"
harness = false

[[bench]]
name = "bench_cross_category"
harness = false

[[bench]]
name = "bench_scaling"
harness = false
