[package]
name = "mettail-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for MeTTaIL - a meta-language framework for defining formal languages"
readme = "../README.md"
publish = false

[lib]
proc-macro = true

[features]
## Propagate WFST features to mettail-prattail.
wfst = ["mettail-prattail/wfst"]
wfst-log = ["mettail-prattail/wfst-log"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-error = { workspace = true }
ascent = { workspace = true }
ascent-byods-rels = { workspace = true }
moniker = { workspace = true }
indexmap = { workspace = true }
mettail-prattail = { path = "../prattail" }
ascent_syntax_export = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
proptest = "1"
