[package]
name = "mettail-prattail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PraTTaIL: Pratt + Recursive Descent parser generator with automata-optimized lexing for MeTTaIL"

[features]
## Log semiring (LogWeight), forward-backward, N-best, log-pushing, training.
wfst-log = ["dep:serde", "dep:postcard"]
## Complex-amplitude semiring for quantum CTMC simulation (MeTTaIL-Gillespie).
quantum = ["dep:num-complex"]
## Grammar-aware expression generator (proptest-based) for benchmarks and tests.
grammar-gen = ["dep:proptest"]
## AL03: SIMD-accelerated whitespace skipping using portable SIMD (std::simd).
## Requires nightly Rust. Processes 16 bytes at a time for whitespace scanning.
simd-whitespace = []

# ── Mathematical Analysis & Theorem Proving Features ─────────────────────────

## Relational weight domain: binary relations on finite sets (SLAM/BLAST-style).
## Heap-allocated semiring; needed for Boolean program analysis via WPDSs.
wpds-relational = []
## EWPDS: Extended WPDS with merging functions for local variable analysis.
wpds-extended = []
## ARA: Affine-Relation Analysis weight domain (vector spaces of matrices).
## Depends on wpds-relational for the HeapSemiring trait.
wpds-ara = ["dep:nalgebra", "wpds-relational"]
## Provenance semiring N[X]: polynomial semiring tracking HOW facts are derived.
provenance = []
## Layered proof output: human-readable explanations + Rocq certificates.
proofs = ["provenance"]
## TRS analysis: confluence (critical pairs), termination (dependency pairs).
trs-analysis = []
## Visibly Pushdown Automata: decidable equivalence/inclusion for structured parsing.
vpa = []
## Weighted Tree Automata: term recognition, ranking, and transduction.
tree-automata = []
## Buchi/Parity automata: infinite-word acceptance for liveness properties.
omega = []
## LTL model checking: WPDS x Buchi product for temporal property verification.
ltl = ["omega"]
## Alternating automata: universal branching for game semantics and CTL.
alternating = []
## Nominal automata: orbit-finite sets for name-passing calculi.
nominal = []
## Petri nets / VASS: concurrent process analysis (deadlock, boundedness).
petri = []
## Cost Register Automata: streaming quantitative computation.
cra = []
## Kleene Algebra with Tests: decidable Hoare logic, program equivalence.
kat = []
## Theory morphisms: cross-theory translation and proof transfer.
morphisms = []

# ── Advanced Automata Infrastructure ──────────────────────────────────────────

## Symbolic automata: predicate-labeled transitions, BooleanAlgebra trait,
## decidability classification (T1-T4), guard analysis.
symbolic-automata = ["kat"]
## Weighted MSO logic: grammar property specification, lint-as-formula,
## Büchi-Elgot-Trakhtenbrot bridge (Droste & Gastin 2007).
weighted-mso = ["symbolic-automata"]
## Parity alternating tree automata: mu-calculus model checking on ASTs,
## structural verification, test generation (Emerson & Jutla 1991).
parity-tree-automata = ["alternating", "tree-automata"]
## Register automata: data-aware finite-state computation, context-sensitive
## parsing, binding verification (Kaminski & Francez 1994).
register-automata = ["nominal"]
## Probabilistic automata: statistical disambiguation, expected-case
## optimization, corpus-driven weight training.
probabilistic = ["wfst-log"]
## Multi-tape automata: synchronized multi-stream computation,
## multi-channel receives, parallel tokenization (Kempe 2004).
multi-tape = ["wfst-log"]
## Multiset automata: process multiplicity, resource-bounded parsing,
## cardinality predicates (Müller, Weiß & Lochau 2024).
multiset-automata = []
## Weighted two-way transducers: bidirectional weighted transductions,
## cross-channel constraint propagation (Feng & Maletti 2022).
two-way-transducer = ["wfst-log"]
## Predicate Dispatch Automaton: algebraic variety classification for directed
## module dispatch. Decomposes predicate formulas into morphemes and activates
## only the relevant Phase 7 modules (Eilenberg variety theorem).
predicate-dispatch = ["symbolic-automata", "weighted-mso"]

# ── Convenience groups ───────────────────────────────────────────────────────

## Grammar-level analysis (tree automata + VPA + TRS).
analysis = ["tree-automata", "vpa", "trs-analysis"]
## Program verification (omega + LTL + KAT + relational WPDS).
verification = ["omega", "ltl", "kat", "wpds-relational"]
## Process algebra analysis (nominal + Petri + omega + alternating + symbolic + two-way).
process-algebra = ["nominal", "petri", "omega", "alternating", "symbolic-automata",
                   "two-way-transducer"]
## Predicated types infrastructure (all modules needed for predicate evaluation).
predicated-types = ["symbolic-automata", "weighted-mso", "parity-tree-automata",
                    "register-automata", "multi-tape", "multiset-automata",
                    "two-way-transducer"]
## Everything: all analysis, verification, and advanced automata features.
full-analysis = [
    "wfst-log", "quantum",
    "wpds-relational", "wpds-extended", "wpds-ara",
    "provenance", "proofs",
    "trs-analysis", "vpa", "tree-automata",
    "omega", "ltl", "alternating",
    "nominal", "petri", "cra", "kat", "morphisms",
    "symbolic-automata", "weighted-mso",
    "parity-tree-automata", "register-automata",
    "probabilistic", "multi-tape", "multiset-automata",
    "two-way-transducer",
    "predicate-dispatch",
]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }
proptest = { version = "1", optional = true }
num-complex = { version = "0.4", optional = true }
nalgebra = { version = "0.33", optional = true }
pathmap = { git = "https://github.com/dylon/PathMap.git", branch = "feature/mettatron-fixes" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "bench_end_to_end"
harness = false

[[bench]]
name = "bench_lexer"
harness = false

[[bench]]
name = "bench_analysis"
harness = false

[[bench]]
name = "bench_codegen"
harness = false

[[bench]]
name = "bench_lexer_codegen"
harness = false

[[bench]]
name = "bench_wfst"
harness = false

[[bench]]
name = "bench_dispatch"
harness = false
required-features = ["grammar-gen"]
