[package]
name = "mettail-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime query interpreter for MeTTaIL: parse and execute Datalog-style rules over Ascent results"
publish = false

[dependencies]
ascent_syntax_export = { path = "../ascent_syntax_export" }
mettail-runtime = { path = "../runtime" }

syn = { workspace = true }