[package]
name = "mettail-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime support library for MeTTaIL - provides variable binding and substitution utilities"
keywords = ["language", "runtime", "binding", "substitution"]
categories = ["development-tools"]
readme = "../README.md"
publish = false

[dependencies]
moniker = { workspace = true }
rustc-hash = "2.0"
syn = { workspace = true }
proc-macro2 = { workspace = true }
num-bigint = "0.4"
num-integer = "0.1"
num-rational = { version = "0.4", features = ["num-bigint-std"] }
num-traits = "0.2"
num-complex = "0.4"